add new words n10l

--- a/lib/l10n/en.arb
+++ b/lib/l10n/en.arb
@@ -2,5 +2,8 @@
   "@@locale": "en",
   "homePage": "Home Page",
   "add": "Add",
-  "logIn": "Log in"
+  "logIn": "Log in",
+  "failure": "Failure!",
+   "selectLangauge": "Select Langauge"
+
 }
