--- a/lib/l10n/az.arb
+++ b/lib/l10n/az.arb
@@ -2,5 +2,7 @@
   "@@locale": "az",
   "homePage": "Ana Səhifə",
   "add": "Əlavə et",
-  "logIn": "Daxil ol"
+  "logIn": "Daxil ol",
+   "failure": "Uğursuz çəht!",
+   "selectLangauge": "Dil seçin"
 }
